<resources>
    <string name="app_name">Suntech</string>

    <string name="enabling_bluetooth">Enabling Bluetooth</string>
    <string name="connecting">Connecting</string>
    <string name="discovering">Discovering</string>
    <string name="disconnecting">Disconnecting</string>

    <!-- Menu items for MainActivity and BleScanActivity -->
    <!--    <string name="menu_scan">Scan</string>-->
    <!--    <string name="menu_connect">Connect</string>-->
    <!--    <string name="menu_disconnect">Disconnect</string>-->
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="waiting_to_connect">Waiting to connect</string>
    <string name="interrogating_features">Interrogating (features)</string>
    <string name="interrogating_configuration">Interrogating (configuration)</string>
    <string name="checking_calibration">Checking calibration</string>
    <string name="ready">READY</string>

    <string name="no_device">No Device</string>
    <string name="not_connected">Not Connected</string>
    <string name="scan_for_devices">Scan for Devices</string>
    <string name="degrees_celcius">\u00b0C</string>
    <string name="degrees_celcius_blank">--.-\u00b0C</string>
    <string name="accelerometer_x">X: </string>
    <string name="accelerometer_x_blank">X: ---</string>
    <string name="accelerometer_y">Y: </string>
    <string name="accelerometer_y_blank">Y: ---</string>
    <string name="accelerometer_z">Z: </string>
    <string name="accelerometer_z_blank">Z: ---</string>
    <string name="accelerometer">Accelerometer:</string>
    <string name="greenled">Green LED</string>
    <string name="redled">Red LED</string>
    <string name="no_devices_found">No devices found</string>
    <string name="scanning_for_devices">Scanning for devices</string>
    <string name="devices_found">Devices found:</string>
    <string name="error">Error</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_hole_id">HoleIDActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_tools">Tools</string>
    <string name="title_activity_operator_id">OperatorIDActivity</string>
    <string name="title_activity_select_probe">SelectProbe</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    <string name="title_activity_survey_options">SurveyOptionsActivity</string>
    <string name="title_activity_preferences_operations_mode">PreferencesOperationsMode</string>
    <string name="title_activity_mode_selection">modeSelectionActivity</string>
    <string name="title_activity_edit_depth_interval">editDepthIntervalActivity</string>
    <string name="title_activity_edit_dip">editDipActivity</string>
    <string name="title_activity_edit_initial_depth">editInitialDepthActivity</string>
    <string name="title_activity_edit_mag_deviation">editMagDeviationActivity</string>
    <string name="title_activity_edit_mag_magnitude">editMagMagnitudeActivity</string>
    <string name="title_activity_edit_max_movement_deviation">editMaxMovementDeviationActivity
    </string>
    <string name="title_activity_edit_roll">editRollActivity</string>
    <string name="title_activity_delete_files">deleteFilesActivity</string>
    <string name="title_activity_email_files">emailFilesActivity</string>

    <string-array name="mode_selection_values">
        <item>Core Orientation (Dual)</item>
        <item>Bore Orientation (Single)</item>
    </string-array>
    <string name="title_activity_initalise_popup">InitalisePopupActivity</string>
    <string name="title_activity_all_survey_options">AllSurveyOptionsActivity</string>

    <string name="about">Suntech controls and manages both Camteq downhole survey cameras and Coretell orientation tools used in drilling operations by the mining industry.</string>
    <string name="use">Start by selecting a probe using the "Tools" button on the main page. Nearby probes will be scanned and shown in a list. Choose a probe from this list. If a probe does not appear make sure it is within range, not connected to another handset and that bluetooth is enabled on this handset</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_sensor">SensorActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_save_data">SaveData</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_calibration">CalibrationActivity</string>

</resources>
