<?xml version="1.0" encoding="utf-8"?>
<!-- Menu used in the MainActivity -->
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_disconnect"
        android:title="@string/menu_disconnect"
        android:orderInCategory="1"/>
    <item android:id="@+id/menu_help"
        android:title="@string/menu_help"
        android:orderInCategory="2"/>
    <item android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:orderInCategory="3"/>
    <item android:id="@+id/menu_exit"
        android:title="@string/menu_exit"
        android:orderInCategory="4"/>
    <item android:id="@+id/menu_preferences"
        android:title="Preferences"
        android:orderInCategory="5"/>
</menu>
