<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <com.google.android.material.appbar.AppBarLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:theme="@style/AppTheme.AppBarOverlay"
        layout_height="20dp"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>




    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_device_address"
            android:textSize="18sp"/>
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/rawData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_state"
            android:textSize="18sp"/>
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/connection_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnected"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_data"
            android:textSize="18sp"/>
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/data_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textSize="18sp"/>
    </LinearLayout>
    <ExpandableListView android:id="@+id/gatt_services_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>